--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="hero-section-left">
             <div class="hero-section-heading">Hi!! Dear...</div>
             <div class="hero-section-sub-heading">I am a <span class="role"></span></div>
-            <div class="hero-section-description">I am Kavita Maurya. I am a software developer and it is my portfolio. Here you can know about me and my journey as a software devloper.</div>
+            <div class="hero-section-description">I am Kavita Maurya. I am a software developer and it is my portfolio. Here you can know about me and my journey as a software developer.</div>
        <div class="btn-pink" id="btn">Hire me</div>
        <button id="resume"><a href="KAVITA MAURYA resume.pdf">See My Resume</a></button>
         </div>
