--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="hero-section-sub-heading">I am a <span class="role"></span></div>
             <div class="hero-section-description">I am Kavita Maurya. I am a software developer and it is my portfolio. Here you can know about me and my journey as a software developer.</div>
        <div class="btn-pink" id="btn">Hire me</div>
-       <button id="resume"><a href="CS_IT_SWE_Resume_Template">See My Resume</a></button>
+       <button id="resume"><a href="CS_IT_SWE_Resume_Template.pdf">See My Resume</a></button>
         </div>
 <div class="hero-section-right">
 
